fixed paragraph alignment

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ img.poster {
 	border-right: 5px solid green;
 	padding-right: 0.25em;
 	margin-right: 0.5em;
-	vertical-align: bottom;
+	height: 3em;
 }
 
 .gallery p {
